# entry_project

./: .env  .render.yaml  MOBILE_API_GUIDE.md  MOBILE_FIREBASE_SETUP.md  MOBILE_NOTIFICATION_GUIDE.md  Procfile  package-lock.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: keep_alive.yml
api/: asgi.py
entry_project/: settings.py
entryapp/: admin.py  apps.py  forms.py  models.py  routers.py  scheduler.py  serializers.py  urls.py  views.py  views.py.backup
entryapp/migrations/: 0001_initial.py  0002_invitationcode.py  0003_alter_entryexitrecord_date.py  0004_remove_entryexitrecord_entry_count_and_more.py  0005_shop_address_shop_email_shop_phone_alter_shop_name.py  0006_rename_date_entryexitrecord_created_at_and_more.py  0007_userpermission.py  0008_entryexitrecord_is_exit.py  0009_rename_shop_id_user_customer_id_shop_customer_id.py  0010_customer.py  0011_alter_entryexitrecord_options_entryexitrecord_rssi_and_more.py  0012_role_userrole.py  0013_rename_customer_id_user_shop_id_and_more.py  0014_goal_dailyentry.py  0015_goal_deleted_by.py  0016_device_current_version_and_devicestatuslog.py  0017_entryexitrecord_rssi_shop_notification_push_token_and_more.py  0018_remove_shop_notification_time_entryexitrecord_rssi_and_more.py
entryapp/ota/: api.py  config.py  db.py  django_setup.py  mqtt_service.py
entryapp/services/: fake_notifications.py  fcm_v1.py
entryapp/static/css/: style.css
entryapp/templates/: home.html  register.html
entryapp/templatetags/: custom_filters.py
entryproject/: asgi.py  settings.py  urls.py  wsgi.py
(+31 files in other folders)
